src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_39_3.deca
// Description:
//    regle 3.39, condition
//
// Resultats:
//    Ligne 13: Illegal cast.


class C{

}

{
    Object b = (C) (3);
}